--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Estilos gerais da página */
 body {
     font-family: Ubuntu, sans-serif;
     margin: 0;
@@ -36,11 +35,11 @@ body {
     color: #1808fd;
 }
 
-/* Estilos da seção do portfólio */
+
 .embed-responsive {
     margin-top: 20px;
 }
-/* Estilos para o carrossel */
+
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 10px;
@@ -53,7 +52,7 @@ body {
 }
 .carousel-item {
     position: relative;
-    height: 90vh; /* Ajuste a altura conforme necessário */
+    height: 90vh; 
 }
 .carousel-caption h5 {
     font-size: 24px;
@@ -80,13 +79,12 @@ body {
 }
 
 
-/* Estilos para o banner */
 .banner {
-    background-image: url('img/banner-background.png');
+    background-image: url('banner-background.png');
     background-size: cover;
     background-position: center;
-    color: #ffffff; /* Cor do texto no banner */
-    padding: 100px 0; /* Espaçamento interno do banner */
+    color: #ffffff; 
+    padding: 100px 0; 
 }
 
 .banner h1 {
@@ -94,13 +92,12 @@ body {
     margin-bottom: 20px;
 }
 
-/* Estilos para os títulos das seções */
 h2 {
     font-size: 28px;
     margin-bottom: 20px;
 }
 
-/* Estilos para os parágrafos */
+
 p {
     font-size: 18px;
     line-height: 1.5;
